--- a/VidCoder/Resources/Translations/PickerRes.es.resx
+++ b/VidCoder/Resources/Translations/PickerRes.es.resx
@@ -263,8 +263,16 @@
   <data name="OverrideNameFormatLabel" xml:space="preserve">
     <value>Opciones disponibles: {0}</value>
   </data>
-  
-  
+  <data name="DurationFilterStartAutomationName" xml:space="preserve">
+    <value>Inicio en minutos del filtro de duración</value>
+    <comment>Screen reader text for number box that represents the start of the filter range in minutes. The number chosen in this box represents the minimum title length in minutes that will be chosen.
+</comment>
+  </data>
+  <data name="DurationFilterEndAutomationName" xml:space="preserve">
+    <value>Término en minutos del filtro de duración</value>
+    <comment>Screen reader text for number box that represents the end of the filter range in minutes. The number chosen in this box represents the maximum title length in minutes that will be chosen.
+</comment>
+  </data>
   <data name="DurationFilterCheckBoxAutomationName" xml:space="preserve">
     <value>Filtro de títulos por duración</value>
     <comment>Name for screen readers for the checkbox to filter titles by a given duration range.</comment>
