--- a/VidCoder/Resources/Translations/SubtitleRes.tr.resx
+++ b/VidCoder/Resources/Translations/SubtitleRes.tr.resx
@@ -168,6 +168,11 @@
   <data name="SubtitleCharsetDetectionFailedMessage" xml:space="preserve">
     <value>Altyazı dosyasının karakter kodlaması algılanamadı. Altyazıların doğru gösterileceğinden emin olmak için dosyayı UTF-8 olarak yeniden kaydedin.</value>
   </data>
-  
-  
+  <data name="NoSubtitlesText" xml:space="preserve">
+    <value>Kaynakta altyazı bulunamadı.</value>
+  </data>
+  <data name="ExternalSubtitlesSummaryFormat" xml:space="preserve">
+    <value>{0} dış</value>
+    <comment>{0} is the number of external subtitle tracks included. e.g. "5 external"</comment>
+  </data>
 </root>
